After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 634907 - Fix build against GNOME 3 platform
Fix build against GNOME 3 platform
Status: RESOLVED FIXED
Product: eog
Classification: Core
Component: general
unspecified
Other All
: Normal normal
: ---
Assigned To: EOG Maintainers
EOG Maintainers
Depends on:
Blocks:
 
 
Reported: 2010-11-15 14:17 UTC by Baptiste Mille-Mathias
Modified: 2010-11-15 21:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Fix build against GNOME 3 platform (1.20 KB, patch)
2010-11-15 14:17 UTC, Baptiste Mille-Mathias
none Details | Review

Description Baptiste Mille-Mathias 2010-11-15 14:17:50 UTC
Change lignomeui to libgnome-desktop
Comment 1 Baptiste Mille-Mathias 2010-11-15 14:17:52 UTC
Created attachment 174509 [details] [review]
Fix build against GNOME 3 platform
Comment 2 Felix Riemann 2010-11-15 21:57:15 UTC
Thanks! Didn't notice the paths changed.

commit 3e2af1c2ba6450075f0315a5230015853b97f87d
Author: Baptiste Mille-Mathias <baptiste.millemathias@gmail.com>
Date:   Mon Nov 15 15:21:09 2010 +0100

    Fix build against GNOME 3 platform
    
    https://bugzilla.gnome.org/show_bug.cgi?id=634907

I also pulled up the gnome-desktop dependency as we are now incompatible to the older versions.

This problem has been fixed in the development version. The fix will be available in the next major software release. Thank you for your bug report.