Fix build against GNOME 3 platform

https://bugzilla.gnome.org/show_bug.cgi?id=634907